--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,29 @@
 			<version>2.13</version>
 		</dependency>
 
+		<!-- maybe resteasy -->
+		<!-- <dependency> -->
+		<!-- <groupId>org.jboss.resteasy</groupId> -->
+		<!-- <artifactId>resteasy-cdi</artifactId> -->
+		<!-- <version>${resteasy.version}</version> -->
+		<!-- <exclusions> -->
+		<!-- <exclusion> -->
+		<!-- <groupId>org.jboss.resteasy</groupId> -->
+		<!-- <artifactId>resteasy-jaxrs</artifactId> -->
+		<!-- </exclusion> -->
+		<!-- </exclusions> -->
+		<!-- </dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>org.jboss.resteasy</groupId> -->
+		<!-- <artifactId>resteasy-jaxrs</artifactId> -->
+		<!-- <version>2.3.6.Final</version> -->
+		<!-- </dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>org.jboss.resteasy</groupId> -->
+		<!-- <artifactId>resteasy-jaxb-provider</artifactId> -->
+		<!-- <version>2.3.6.Final</version> -->
+		<!-- </dependency> -->
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -33,6 +56,23 @@
 
 	<build>
 		<plugins>
+			<!-- ============= Visualizes the Java EE dependencies ================ -->
+			<plugin>
+				<groupId>de.struller-baumann</groupId>
+				<artifactId>visualee</artifactId>
+				<version>0.25</version>
+				<configuration>
+					<outputdirectory>visualee</outputdirectory>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>process-resources</phase>
+						<goals>
+							<goal>visualize</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 			<!-- ================== java version ================== -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
