--- a/pom.xml
+++ b/pom.xml
@@ -16,35 +16,23 @@
 			<artifactId>tomee-embedded</artifactId>
 			<version>1.7.1</version>
 		</dependency>
+		
 		<dependency>
-			<groupId>org.glassfish.jersey.containers</groupId>
-			<!-- if your container implements Servlet API older than 3.0, use "jersey-container-servlet-core" -->
-			<artifactId>jersey-container-servlet</artifactId>
-			<version>2.13</version>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-jaxrs</artifactId>
+			<version>2.3.6.Final</version>
 		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.jboss.resteasy</groupId> -->
+<!-- 			<artifactId>resteasy-jaxb-provider</artifactId> -->
+<!-- 			<version>2.3.6.Final</version> -->
+<!-- 		</dependency> -->
 
-		<!-- maybe resteasy -->
-		<!-- <dependency> -->
-		<!-- <groupId>org.jboss.resteasy</groupId> -->
-		<!-- <artifactId>resteasy-cdi</artifactId> -->
-		<!-- <version>${resteasy.version}</version> -->
-		<!-- <exclusions> -->
-		<!-- <exclusion> -->
-		<!-- <groupId>org.jboss.resteasy</groupId> -->
-		<!-- <artifactId>resteasy-jaxrs</artifactId> -->
-		<!-- </exclusion> -->
-		<!-- </exclusions> -->
-		<!-- </dependency> -->
-		<!-- <dependency> -->
-		<!-- <groupId>org.jboss.resteasy</groupId> -->
-		<!-- <artifactId>resteasy-jaxrs</artifactId> -->
-		<!-- <version>2.3.6.Final</version> -->
-		<!-- </dependency> -->
-		<!-- <dependency> -->
-		<!-- <groupId>org.jboss.resteasy</groupId> -->
-		<!-- <artifactId>resteasy-jaxb-provider</artifactId> -->
-		<!-- <version>2.3.6.Final</version> -->
-		<!-- </dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>net.sf.scannotation</groupId> -->
+<!-- 			<artifactId>scannotation</artifactId> -->
+<!-- 			<version>1.0.2</version> -->
+<!-- 		</dependency> -->
 
 		<dependency>
 			<groupId>junit</groupId>
