--- a/pom.xml
+++ b/pom.xml
@@ -28,11 +28,11 @@
 <!-- 			<version>2.3.6.Final</version> -->
 <!-- 		</dependency> -->
 
-<!-- 		<dependency> -->
-<!-- 			<groupId>net.sf.scannotation</groupId> -->
-<!-- 			<artifactId>scannotation</artifactId> -->
-<!-- 			<version>1.0.2</version> -->
-<!-- 		</dependency> -->
+		<dependency>
+			<groupId>net.sf.scannotation</groupId>
+			<artifactId>scannotation</artifactId>
+			<version>1.0.2</version>
+		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
