--- a/pom.xml
+++ b/pom.xml
@@ -16,17 +16,17 @@
 			<artifactId>tomee-embedded</artifactId>
 			<version>1.7.1</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-jaxrs</artifactId>
 			<version>2.3.6.Final</version>
 		</dependency>
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.jboss.resteasy</groupId> -->
-<!-- 			<artifactId>resteasy-jaxb-provider</artifactId> -->
-<!-- 			<version>2.3.6.Final</version> -->
-<!-- 		</dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>org.jboss.resteasy</groupId> -->
+		<!-- <artifactId>resteasy-jaxb-provider</artifactId> -->
+		<!-- <version>2.3.6.Final</version> -->
+		<!-- </dependency> -->
 
 		<dependency>
 			<groupId>net.sf.scannotation</groupId>
@@ -57,6 +57,12 @@
 			<artifactId>neo4j-kernel</artifactId>
 			<version>2.1.4</version>
 			<type>test-jar</type>
+		</dependency>
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-all</artifactId>
+			<version>1.3</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
