--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,17 @@
 			<version>1.3</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- ==== Logging ==== -->
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.1</version>
+		</dependency>
 	</dependencies>
 
 	<!-- For Neo4j repos -->
