--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,30 @@
 	<name>Maven Quick Start Archetype</name>
 	<url>http://maven.apache.org</url>
 
+	<!-- For Neo4j repos -->
+	<repositories>
+		<repository>
+			<id>neo4j-public</id>
+			<url>http://m2.neo4j.org/content/groups/public</url>
+			<releases>
+				<enabled>true</enabled>
+				<checksumPolicy>warn</checksumPolicy>
+			</releases>
+		</repository>
+	</repositories>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.jboss.arquillian</groupId>
+				<artifactId>arquillian-bom</artifactId>
+				<version>1.1.5.Final</version>
+				<scope>import</scope>
+				<type>pom</type>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.openejb</groupId>
@@ -41,7 +65,7 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- For file and in-memory support, add these two as well -->
+		<!-- ===== Neo4J ===== -->
 		<dependency>
 			<groupId>org.neo4j</groupId>
 			<artifactId>neo4j</artifactId>
@@ -58,12 +82,29 @@
 			<version>2.1.4</version>
 			<type>test-jar</type>
 		</dependency>
+
+		<!-- Hamcrest Matchers -->
 		<dependency>
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest-all</artifactId>
 			<version>1.3</version>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- ==== Arquillian ==== -->
+		<dependency>
+			<groupId>org.jboss.arquillian.junit</groupId>
+			<artifactId>arquillian-junit-container</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<!-- the container adapter -->
+		<dependency>
+			<groupId>org.apache.openejb</groupId>
+			<artifactId>arquillian-tomee-embedded</artifactId>
+			<version>1.7.1</version>
+			<scope>test</scope>
+		</dependency>
+
 		<!-- ==== Logging ==== -->
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
@@ -77,18 +118,6 @@
 		</dependency>
 	</dependencies>
 
-	<!-- For Neo4j repos -->
-	<repositories>
-		<repository>
-			<id>neo4j-public</id>
-			<url>http://m2.neo4j.org/content/groups/public</url>
-			<releases>
-				<enabled>true</enabled>
-				<checksumPolicy>warn</checksumPolicy>
-			</releases>
-		</repository>
-	</repositories>
-
 	<build>
 		<plugins>
 			<!-- ================== java version ================== -->
@@ -99,6 +128,10 @@
 					<source>1.8</source>
 					<target>1.8</target>
 				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.17</version>
 			</plugin>
 		</plugins>
 	</build>
